--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -109,13 +109,18 @@ jobs:
           sed -i 's/conan install/conan install . --build=missing/g' build-conan.sh
           chmod +x build-conan.sh
           ./build-conan.sh
-
+          
+          # Verify binary
+          find . -type f -name "RetroSLM" -exec file {} \;
       # --- LINUX 32-BIT (i386) ---
       - name: Build Linux i386 (32-bit)
         if: matrix.os == 'linux' && matrix.arch == 'i386'
         continue-on-error: true
         run: |
           set +e
+
+          # Clean previous builds
+          rm -rf build build-i386 CMakeCache.txt
           
           # Install 32-bit cross-compilation tools
           sudo dpkg --add-architecture i386
@@ -134,35 +139,49 @@ jobs:
           compiler.cppstd=gnu17
           build_type=Release
           
-          [conf]
-          tools. cmake.cmaketoolchain:user_toolchain=["$PWD/toolchain-i386.cmake"]
           EOF
           
           # Create CMake toolchain file for i386
           cat <<EOF > toolchain-i386.cmake
           set(CMAKE_SYSTEM_NAME Linux)
           set(CMAKE_SYSTEM_PROCESSOR i686)
-          set(CMAKE_C_FLAGS "\${CMAKE_C_FLAGS} -m32" CACHE STRING "" FORCE)
-          set(CMAKE_CXX_FLAGS "\${CMAKE_CXX_FLAGS} -m32" CACHE STRING "" FORCE)
-          set(CMAKE_EXE_LINKER_FLAGS "\${CMAKE_EXE_LINKER_FLAGS} -m32" CACHE STRING "" FORCE)
-          set(CMAKE_SHARED_LINKER_FLAGS "\${CMAKE_SHARED_LINKER_FLAGS} -m32" CACHE STRING "" FORCE)
+          set(CMAKE_C_COMPILER gcc)
+          set(CMAKE_CXX_COMPILER g++)
+          set(CMAKE_C_FLAGS "-m32" CACHE STRING "" FORCE)
+          set(CMAKE_CXX_FLAGS "-m32" CACHE STRING "" FORCE)
+          set(CMAKE_EXE_LINKER_FLAGS "-m32" CACHE STRING "" FORCE)
+          set(CMAKE_SHARED_LINKER_FLAGS "-m32" CACHE STRING "" FORCE)
+          set(CMAKE_MODULE_LINKER_FLAGS "-m32" CACHE STRING "" FORCE)
           EOF
           
           # Install dependencies with Conan
-          conan install . -pr:b=default -pr:h=i386 --build=missing --output-folder=build
+          conan install . -pr:b=default -pr:h=i386 --build=missing --output-folder=build-i386 || exit 0
           
-          # Build with CMake
-          cd build
-          cmake ..  -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_TOOLCHAIN_FILE=generators/conan_toolchain. cmake \
+          # Build with CMake - NOT using presets
+          mkdir -p build-i386/cmake-build
+          cd build-i386/cmake-build
+          
+          cmake ../.. \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_TOOLCHAIN_FILE=../../toolchain-i386.cmake \
+            -DCMAKE_PREFIX_PATH="$PWD/../" \
             -DCMAKE_C_FLAGS="-m32" \
-            -DCMAKE_CXX_FLAGS="-m32" \
-            -DCMAKE_EXE_LINKER_FLAGS="-m32"
-          cmake --build . --config Release -j$(nproc)
+            -DCMAKE_CXX_FLAGS="-m32" || exit 0
           
-          # Verify binary architecture
-          find .  -name "RetroSLM" -exec file {} \;
-
+          cmake --build . --config Release -j$(nproc) || exit 0
+          
+          # Verify and find binary
+          echo "=== Searching for i386 binary ==="
+          find . -type f -name "RetroSLM" -o -name "retroslm" | while read binary; do
+            echo "Found: $binary"
+            file "$binary"
+            if file "$binary" | grep -q "80386\|i386\|32-bit.*Intel"; then
+              echo "Valid i386 binary found!"
+              mkdir -p ../../dist-i386
+              cp "$binary" ../../dist-i386/RetroSLM
+              chmod +x ../../dist-i386/RetroSLM
+            fi
+          done
       # --- LINUX ARM64 (aarch64) ---
       - name: Build Linux ARM64 (aarch64)
         if: matrix.os == 'linux' && matrix.arch == 'aarch64'
@@ -181,13 +200,11 @@ jobs:
           os=Linux
           arch=armv8
           compiler=gcc
-          compiler.version=$(aarch64-linux-gnu-gcc -dumpversion | cut -d. -f1)
+          compiler.version=$(gcc -dumpversion -dumpversion | cut -d. -f1)
           compiler.libcxx=libstdc++11
           compiler.cppstd=gnu17
           build_type=Release
           
-          [conf]
-          tools.cmake.cmaketoolchain:user_toolchain=["$PWD/toolchain-aarch64.cmake"]
           EOF
           
           # Create CMake toolchain file for aarch64
@@ -196,6 +213,9 @@ jobs:
           set(CMAKE_SYSTEM_PROCESSOR aarch64)
           set(CMAKE_C_COMPILER aarch64-linux-gnu-gcc)
           set(CMAKE_CXX_COMPILER aarch64-linux-gnu-g++)
+          set(CMAKE_AR aarch64-linux-gnu-ar)
+          set(CMAKE_RANLIB aarch64-linux-gnu-ranlib)
+          set(CMAKE_STRIP aarch64-linux-gnu-strip)
           set(CMAKE_FIND_ROOT_PATH /usr/aarch64-linux-gnu)
           set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
           set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
@@ -204,16 +224,31 @@ jobs:
           EOF
           
           # Install dependencies with Conan
-          conan install . -pr:b=default -pr:h=aarch64 --build=missing --output-folder=build
+          conan install . -pr:b=default -pr:h=aarch64 --build=missing --output-folder=build-aarch64 || exit 0
           
           # Build with CMake
-          cd build
-          cmake .. -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_TOOLCHAIN_FILE=generators/conan_toolchain.cmake
-          cmake --build . --config Release -j$(nproc)
+          mkdir -p build-aarch64/cmake-build
+          cd build-aarch64/cmake-build
           
-          # Verify binary architecture
-          find . -name "RetroSLM" -exec file {} \;
+          cmake ../..  \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_TOOLCHAIN_FILE=../../toolchain-aarch64.cmake \
+            -DCMAKE_PREFIX_PATH="$PWD/../" || exit 0
+          
+          cmake --build . --config Release -j$(nproc) || exit 0
+          
+          # Verify and find binary
+          echo "=== Searching for aarch64 binary ==="
+          find . -type f -name "RetroSLM" -o -name "retroslm" | while read binary; do
+            echo "Found:  $binary"
+            file "$binary"
+            if file "$binary" | grep -q "aarch64\|ARM.*64-bit"; then
+              echo "Valid aarch64 binary found!"
+              mkdir -p ../../dist-aarch64
+              cp "$binary" ../../dist-aarch64/RetroSLM
+              chmod +x ../../dist-aarch64/RetroSLM
+            fi
+          done
 
       # --- LINUX ARMv7 ---
       - name: Build Linux ARMv7
@@ -221,6 +256,9 @@ jobs:
         continue-on-error: true
         run: |
           set +e
+
+          # Clean previous builds
+          rm -rf build build-armv7 CMakeCache.txt
           
           # Install ARMv7 cross-compilation tools
           sudo apt-get update
@@ -233,9 +271,9 @@ jobs:
           os=Linux
           arch=armv7hf
           compiler=gcc
-          compiler.version=$(arm-linux-gnueabihf-gcc -dumpversion | cut -d. -f1)
+          compiler.version=$(gcc -dumpversion | cut -d. -f1)
           compiler.libcxx=libstdc++11
-          compiler. cppstd=gnu17
+          compiler.cppstd=gnu17
           build_type=Release
           
           [conf]
@@ -248,6 +286,9 @@ jobs:
           set(CMAKE_SYSTEM_PROCESSOR armv7l)
           set(CMAKE_C_COMPILER arm-linux-gnueabihf-gcc)
           set(CMAKE_CXX_COMPILER arm-linux-gnueabihf-g++)
+          set(CMAKE_AR arm-linux-gnueabihf-ar)
+          set(CMAKE_RANLIB arm-linux-gnueabihf-ranlib)
+          set(CMAKE_STRIP arm-linux-gnueabihf-strip)
           set(CMAKE_FIND_ROOT_PATH /usr/arm-linux-gnueabihf)
           set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
           set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
@@ -256,16 +297,31 @@ jobs:
           EOF
           
           # Install dependencies with Conan
-          conan install . -pr:b=default -pr: h=armv7 --build=missing --output-folder=build
+          conan install . -pr:b=default -pr:h=armv7 --build=missing --output-folder=build-armv7 || exit 0
           
           # Build with CMake
-          cd build
-          cmake .. -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_TOOLCHAIN_FILE=generators/conan_toolchain.cmake
-          cmake --build . --config Release -j$(nproc)
+          mkdir -p build-armv7/cmake-build
+          cd build-armv7/cmake-build
           
-          # Verify binary architecture
-          find . -name "RetroSLM" -exec file {} \;
+          cmake ../.. \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_TOOLCHAIN_FILE=../../toolchain-armv7.cmake \
+            -DCMAKE_PREFIX_PATH="$PWD/../" || exit 0
+          
+          cmake --build . --config Release -j$(nproc) || exit 0
+          
+          # Verify and find binary
+          echo "=== Searching for armv7 binary ==="
+          find . -type f -name "RetroSLM" -o -name "retroslm" | while read binary; do
+            echo "Found:  $binary"
+            file "$binary"
+            if file "$binary" | grep -q "ARM.*32-bit"; then
+              echo "Valid armv7 binary found!"
+              mkdir -p ../../dist-armv7
+              cp "$binary" ../../dist-armv7/RetroSLM
+              chmod +x ../../dist-armv7/RetroSLM
+            fi
+          done
 
           
 
@@ -273,22 +329,72 @@ jobs:
       - name: Package Artifacts
         shell: bash
         run: |
-          DATE=$(date +'%Y.%m.%d')
+          DATE=$(date +'%Y. %m.%d')
           mkdir -p dist
+          
           if [ "${{ matrix.os }}" = "windows" ]; then
             if [ -f output/Release/RetroSLM.exe ]; then
-              cp output/Release/RetroSLM.exe dist/RetroSLM_${DATE}_win_${{ matrix.arch }}.exe
+              cp output/Release/RetroSLM. exe dist/RetroSLM_${DATE}_win_${{ matrix.arch }}.exe
+              echo "✓ Packaged Windows binary"
             fi
-          else
-            # Search for RetroSLM binary in common locations
-            BINARY=$(find . -type f -name "RetroSLM" -o -name "retroslm" | head -n 1)
+          elif [ "${{ matrix. os }}" = "macos" ]; then
+            BINARY=$(find build -type f -name "RetroSLM" 2>/dev/null | head -n 1)
             if [ -n "$BINARY" ] && [ -f "$BINARY" ]; then
-              cp "$BINARY" dist/RetroSLM_${DATE}_${{ matrix.os }}_${{ matrix. arch }}
-              chmod +x dist/RetroSLM_${DATE}_${{ matrix.os }}_${{ matrix.arch }}
+              cp "$BINARY" dist/RetroSLM_${DATE}_${{ matrix.os }}_${{ matrix.arch }}
+              chmod +x dist/RetroSLM_${DATE}_${{ matrix.os }}_${{ matrix. arch }}
+              echo "✓ Packaged macOS binary"
               file dist/RetroSLM_${DATE}_${{ matrix.os }}_${{ matrix.arch }}
+            fi
+          elif [ "${{ matrix.os }}" = "linux" ]; then
+            case "${{ matrix.arch }}" in
+              x86_64)
+                BINARY=$(find build -type f -name "RetroSLM" 2>/dev/null | head -n 1)
+                ;;
+              i386)
+                BINARY=$(find dist-i386 -type f -name "RetroSLM" 2>/dev/null | head -n 1)
+                ;;
+              aarch64)
+                BINARY=$(find dist-aarch64 -type f -name "RetroSLM" 2>/dev/null | head -n 1)
+                ;;
+              armv7)
+                BINARY=$(find dist-armv7 -type f -name "RetroSLM" 2>/dev/null | head -n 1)
+                ;;
+            esac
+            
+            if [ -n "$BINARY" ] && [ -f "$BINARY" ]; then
+              # Verify architecture before packaging
+              ARCH_CHECK=$(file "$BINARY")
+              echo "Binary check: $ARCH_CHECK"
+              
+              VALID=false
+              case "${{ matrix.arch }}" in
+                x86_64)
+                  echo "$ARCH_CHECK" | grep -q "x86-64.*64-bit" && VALID=true
+                  ;;
+                i386)
+                  echo "$ARCH_CHECK" | grep -q "80386\|i386\|Intel.*32-bit" && VALID=true
+                  ;;
+                aarch64)
+                  echo "$ARCH_CHECK" | grep -q "aarch64\|ARM.*64-bit" && VALID=true
+                  ;;
+                armv7)
+                  echo "$ARCH_CHECK" | grep -q "ARM.*32-bit" && VALID=true
+                  ;;
+              esac
+              
+              if [ "$VALID" = "true" ]; then
+                cp "$BINARY" dist/RetroSLM_${DATE}_${{ matrix.os }}_${{ matrix.arch }}
+                chmod +x dist/RetroSLM_${DATE}_${{ matrix. os }}_${{ matrix.arch }}
+                echo "✓ Packaged valid ${{ matrix.arch }} binary"
+                file dist/RetroSLM_${DATE}_${{ matrix. os }}_${{ matrix.arch }}
+              else
+                echo "✗ Binary architecture mismatch for ${{ matrix.arch }}"
+                echo "Expected: ${{ matrix.arch }}, Got: $ARCH_CHECK"
+                touch dist/. failed_${{ matrix.arch }}
+              fi
             else
-              echo "Warning: No binary found for ${{ matrix.os }} ${{ matrix.arch }}"
-              touch dist/. empty_build_${{ matrix.arch }}
+              echo "✗ No binary found for ${{ matrix.os }} ${{ matrix.arch }}"
+              touch dist/.empty_build_${{ matrix.arch }}
             fi
           fi
 
@@ -310,10 +416,14 @@ jobs:
         with:
           path: ./release-files
           merge-multiple: true
-      - name: Remove empty build markers
+      - name: Remove build markers and show files
         run: |
           find ./release-files -name ". empty_build_*" -delete || true
+          find ./release-files -name ". failed_*" -delete || true
+          echo "=== Release files ==="
           ls -lah ./release-files/
+          find ./release-files -type f -exec file {} \;
+      
       - id: datetime
         run: echo "now=$(date +'%Y.%m.%d %H:%M')" >> $GITHUB_OUTPUT
       - uses: softprops/action-gh-release@v2
