Może zadziała crosscompiling

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -1,23 +1,23 @@
 name: Build and Release RetroSLM
 
-on: 
-  schedule:
+on:
+  schedule: 
     - cron: '0 0 * * *'
-  workflow_dispatch: 
+  workflow_dispatch:
 
-jobs:
+jobs: 
   build:
-    name: ${{ matrix.os }} ${{ matrix.arch }}
+    name:  ${{ matrix.os }} ${{ matrix.arch }}
     runs-on: ${{ matrix.runner }}
     strategy:
       fail-fast: false
       matrix: 
         include:
-          - os: windows
+          - os:  windows
             arch: x64
             runner: windows-latest
           - os: windows
-            arch: x86
+            arch:  x86
             runner: windows-latest
           - os: macos
             arch: armv8
@@ -25,26 +25,26 @@ jobs:
           - os: macos
             arch: x86_64
             runner: macos-15
-          - os:  linux
-            arch: x86_64
-            runner: ubuntu-latest
           - os: linux
+            arch:  x86_64
+            runner:  ubuntu-latest
+          - os:  linux
             arch: i386
             runner: ubuntu-latest
           - os: linux
-            arch: aarch64
+            arch:  aarch64
             runner: ubuntu-24.04-arm
           - os: linux
             arch: armv7
-            runner:  ubuntu-latest
+            runner: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses:  actions/checkout@v4
 
       - name: Setup Python
         uses: actions/setup-python@v5
-        with: 
+        with:
           python-version: '3.x'
 
       - name: Install Conan
@@ -55,7 +55,7 @@ jobs:
         if: matrix.os == 'windows'
         shell: cmd
         run: |
-          if not exist "%USERPROFILE%\. conan2\profiles" mkdir "%USERPROFILE%\.conan2\profiles"
+          if not exist "%USERPROFILE%\.conan2\profiles" mkdir "%USERPROFILE%\.conan2\profiles"
           (
           echo [settings]
           echo os=Windows
@@ -66,7 +66,8 @@ jobs:
           echo compiler.runtime=dynamic
           echo compiler.runtime_type=Release
           echo build_type=Release
-          ) > "%USERPROFILE%\. conan2\profiles\default"
+          ) > "%USERPROFILE%\.conan2\profiles\default"
+          :: Naprawa skryptu: dodajemy --build=missing do conan install
           powershell -Command "(gc build-conan.cmd) -replace 'conan install', 'conan install . --build=missing' | Out-File -encoding ASCII build-conan.cmd"
           call build-conan.cmd
 
@@ -74,7 +75,7 @@ jobs:
       - name: Build macOS
         if: matrix.os == 'macos'
         run: |
-          mkdir -p ~/. conan2/profiles
+          mkdir -p ~/.conan2/profiles
           cat <<EOF > ~/.conan2/profiles/default
           [settings]
           os=Macos
@@ -85,12 +86,13 @@ jobs:
           compiler.cppstd=gnu17
           build_type=Release
           EOF
+          # Naprawa skryptu: dodajemy --build=missing
           sed -i '' 's/conan install/conan install . --build=missing/g' build-conan.sh
           chmod +x build-conan.sh
-          ./build-conan. sh
+          ./build-conan.sh
 
       # --- LINUX STANDARD (x86_64) ---
-      - name: Build Linux x86_64
+      - name: Build Linux Standard
         if: matrix.os == 'linux' && matrix.arch == 'x86_64'
         run: |
           mkdir -p ~/.conan2/profiles
@@ -100,7 +102,7 @@ jobs:
           arch=x86_64
           compiler=gcc
           compiler.version=11
-          compiler. libcxx=libstdc++11
+          compiler.libcxx=libstdc++11
           compiler.cppstd=gnu17
           build_type=Release
           EOF
@@ -108,10 +110,10 @@ jobs:
           chmod +x build-conan.sh
           ./build-conan.sh
 
-      # --- LINUX ARM64 (aarch64) - Native build on ARM runner ---
+      # --- LINUX ARM64 (aarch64) - Native on ARM runner ---
       - name: Build Linux ARM64 (aarch64)
         if: matrix.os == 'linux' && matrix.arch == 'aarch64'
-        run:  |
+        run: |
           mkdir -p ~/.conan2/profiles
           cat <<EOF > ~/.conan2/profiles/default
           [settings]
@@ -125,23 +127,25 @@ jobs:
           EOF
           sed -i 's/conan install/conan install .  --build=missing/g' build-conan.sh
           chmod +x build-conan.sh
-          ./build-conan. sh
+          ./build-conan.sh
 
       # --- LINUX 32-BIT (i386) ---
       - name: Build Linux i386 (32-bit)
         if: matrix.os == 'linux' && matrix.arch == 'i386'
         continue-on-error: true
         run: |
+          set +e
+          
           # Install 32-bit cross-compilation tools
           sudo dpkg --add-architecture i386
           sudo apt-get update
-          sudo apt-get install -y gcc-multilib g++-multilib libc6-dev-i386 lib32stdc++6
+          sudo apt-get install -y gcc-multilib g++-multilib libc6-dev-i386
           
-          # Create Conan default profile for build machine
+          # Create Conan default profile
           mkdir -p ~/.conan2/profiles
           conan profile detect --force
           
-          # Create Conan profile for i386 host
+          # Create Conan profile for i386
           cat <<EOF > ~/.conan2/profiles/i386
           [settings]
           os=Linux
@@ -151,31 +155,18 @@ jobs:
           compiler.libcxx=libstdc++11
           compiler.cppstd=gnu17
           build_type=Release
-          
-          [buildenv]
-          CFLAGS=-m32
-          CXXFLAGS=-m32
-          LDFLAGS=-m32
           EOF
           
           # Create CMake toolchain file for i386
           cat <<'TOOLCHAIN' > toolchain-i386.cmake
           set(CMAKE_SYSTEM_NAME Linux)
           set(CMAKE_SYSTEM_PROCESSOR i686)
-          
           set(CMAKE_C_COMPILER gcc)
           set(CMAKE_CXX_COMPILER g++)
-          
           set(CMAKE_C_FLAGS_INIT "-m32")
           set(CMAKE_CXX_FLAGS_INIT "-m32")
           set(CMAKE_EXE_LINKER_FLAGS_INIT "-m32")
           set(CMAKE_SHARED_LINKER_FLAGS_INIT "-m32")
-          set(CMAKE_MODULE_LINKER_FLAGS_INIT "-m32")
-          
-          # Force 32-bit compilation
-          set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32" CACHE STRING "" FORCE)
-          set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32" CACHE STRING "" FORCE)
-          set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -m32" CACHE STRING "" FORCE)
           TOOLCHAIN
           
           # Install dependencies with Conan
@@ -191,22 +182,24 @@ jobs:
           
           # Verify binary architecture
           echo "=== Verifying i386 build ==="
-          find build-i386 -type f -name "RetroSLM" -exec file {} \; -exec sh -c 'file "$1" | grep -q "32-bit" && echo "✓ Valid 32-bit binary:  $1"' _ {} \;
+          find build-i386 -name "RetroSLM" -exec file {} \;
 
-      # --- LINUX ARMv7 (cross-compile) ---
+      # --- LINUX ARMv7 ---
       - name: Build Linux ARMv7
         if: matrix.os == 'linux' && matrix.arch == 'armv7'
         continue-on-error: true
         run: |
+          set +e
+          
           # Install ARMv7 cross-compilation tools
           sudo apt-get update
           sudo apt-get install -y gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf binutils-arm-linux-gnueabihf
           
-          # Create Conan default profile for build machine
+          # Create Conan default profile
           mkdir -p ~/.conan2/profiles
           conan profile detect --force
           
-          # Create Conan profile for armv7 host
+          # Create Conan profile for armv7
           cat <<EOF > ~/.conan2/profiles/armv7
           [settings]
           os=Linux
@@ -214,41 +207,26 @@ jobs:
           compiler=gcc
           compiler.version=$(arm-linux-gnueabihf-gcc -dumpversion | cut -d. -f1)
           compiler.libcxx=libstdc++11
-          compiler. cppstd=gnu17
+          compiler.cppstd=gnu17
           build_type=Release
-          
-          [buildenv]
-          CC=arm-linux-gnueabihf-gcc
-          CXX=arm-linux-gnueabihf-g++
-          AR=arm-linux-gnueabihf-ar
-          AS=arm-linux-gnueabihf-as
-          RANLIB=arm-linux-gnueabihf-ranlib
-          LD=arm-linux-gnueabihf-ld
-          STRIP=arm-linux-gnueabihf-strip
           EOF
           
           # Create CMake toolchain file for armv7
           cat <<'TOOLCHAIN' > toolchain-armv7.cmake
           set(CMAKE_SYSTEM_NAME Linux)
           set(CMAKE_SYSTEM_PROCESSOR armv7l)
-          
           set(CMAKE_C_COMPILER arm-linux-gnueabihf-gcc)
           set(CMAKE_CXX_COMPILER arm-linux-gnueabihf-g++)
-          set(CMAKE_AR arm-linux-gnueabihf-ar CACHE FILEPATH "Archiver")
-          set(CMAKE_RANLIB arm-linux-gnueabihf-ranlib CACHE FILEPATH "Ranlib")
-          set(CMAKE_STRIP arm-linux-gnueabihf-strip CACHE FILEPATH "Strip")
-          
+          set(CMAKE_AR arm-linux-gnueabihf-ar CACHE FILEPATH "")
+          set(CMAKE_RANLIB arm-linux-gnueabihf-ranlib CACHE FILEPATH "")
           set(CMAKE_FIND_ROOT_PATH /usr/arm-linux-gnueabihf)
           set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
           set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
           set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
-          set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE ONLY)
-          
-          set(CMAKE_CROSSCOMPILING TRUE)
           TOOLCHAIN
           
-          # Install dependencies with Conan (cross-compile)
-          conan install . -pr:b=default -pr: h=armv7 --build=missing --output-folder=build-armv7
+          # Install dependencies with Conan
+          conan install . -pr:b=default -pr:h=armv7 --build=missing --output-folder=build-armv7
           
           # Build with CMake
           cmake -S . -B build-armv7/Release \
@@ -260,98 +238,88 @@ jobs:
           
           # Verify binary architecture
           echo "=== Verifying ARMv7 build ==="
-          find build-armv7 -type f -name "RetroSLM" -exec file {} \; -exec sh -c 'file "$1" | grep -q "ARM" && echo "✓ Valid ARM binary: $1"' _ {} \;
+          find build-armv7 -name "RetroSLM" -exec file {} \;
 
       # --- PAKOWANIE ---
       - name: Package Artifacts
         shell: bash
-        run: |
+        run:  |
           DATE=$(date +'%Y.%m.%d')
           mkdir -p dist
-          PACKAGED=false
-          
-          echo "=== Packaging for ${{ matrix.os }} ${{ matrix. arch }} ==="
           
           if [ "${{ matrix.os }}" = "windows" ]; then
-            BINARY="output/Release/RetroSLM.exe"
-            if [ -f "$BINARY" ]; then
-              cp "$BINARY" "dist/RetroSLM_${DATE}_win_${{ matrix.arch }}.exe"
-              echo "✓ Packaged:  RetroSLM_${DATE}_win_${{ matrix.arch }}.exe"
-              PACKAGED=true
+            if [ -f output/Release/RetroSLM.exe ]; then
+              cp output/Release/RetroSLM.exe dist/RetroSLM_${DATE}_win_${{ matrix.arch }}.exe
+              echo "✓ Packaged Windows ${{ matrix.arch }}"
             fi
             
           elif [ "${{ matrix.os }}" = "macos" ]; then
             BINARY=$(find build -type f -name "RetroSLM" 2>/dev/null | head -n 1)
             if [ -n "$BINARY" ] && [ -f "$BINARY" ]; then
-              cp "$BINARY" "dist/RetroSLM_${DATE}_macos_${{ matrix.arch }}"
-              chmod +x "dist/RetroSLM_${DATE}_macos_${{ matrix.arch }}"
-              echo "✓ Packaged: RetroSLM_${DATE}_macos_${{ matrix.arch }}"
-              file "dist/RetroSLM_${DATE}_macos_${{ matrix.arch }}"
-              PACKAGED=true
+              cp "$BINARY" dist/RetroSLM_${DATE}_macos_${{ matrix.arch }}
+              chmod +x dist/RetroSLM_${DATE}_macos_${{ matrix.arch }}
+              echo "✓ Packaged macOS ${{ matrix.arch }}"
+              file dist/RetroSLM_${DATE}_macos_${{ matrix.arch }}
             fi
             
           elif [ "${{ matrix.os }}" = "linux" ]; then
-            # Set expected architecture pattern for validation
+            BINARY=""
+            EXPECTED_ARCH=""
+            
             case "${{ matrix.arch }}" in
               x86_64)
-                SEARCH_DIR="build"
-                EXPECTED_PATTERN="x86-64"
+                BINARY=$(find build -type f -name "RetroSLM" 2>/dev/null | head -n 1)
+                EXPECTED_ARCH="x86-64"
                 ;;
               i386)
-                SEARCH_DIR="build-i386"
-                EXPECTED_PATTERN="80386\|Intel 80386\|i386\|32-bit.*Intel"
+                BINARY=$(find build-i386 -type f -name "RetroSLM" 2>/dev/null | head -n 1)
+                EXPECTED_ARCH="80386\|i386\|Intel.*32-bit"
                 ;;
               aarch64)
-                SEARCH_DIR="build"
-                EXPECTED_PATTERN="aarch64\|ARM aarch64"
+                BINARY=$(find build -type f -name "RetroSLM" 2>/dev/null | head -n 1)
+                EXPECTED_ARCH="aarch64\|ARM aarch64"
                 ;;
               armv7)
-                SEARCH_DIR="build-armv7"
-                EXPECTED_PATTERN="ARM\|32-bit.*ARM"
+                BINARY=$(find build-armv7 -type f -name "RetroSLM" 2>/dev/null | head -n 1)
+                EXPECTED_ARCH="ARM\|arm"
                 ;;
             esac
             
-            echo "Searching in:  $SEARCH_DIR for pattern: $EXPECTED_PATTERN"
-            
-            # Find all RetroSLM binaries
-            while IFS= read -r -d '' BINARY; do
-              echo "Checking: $BINARY"
+            if [ -n "$BINARY" ] && [ -f "$BINARY" ]; then
+              # Verify architecture
               ARCH_INFO=$(file "$BINARY")
-              echo "  File info: $ARCH_INFO"
+              echo "Found binary:  $BINARY"
+              echo "Architecture: $ARCH_INFO"
               
-              if echo "$ARCH_INFO" | grep -qE "$EXPECTED_PATTERN"; then
-                cp "$BINARY" "dist/RetroSLM_${DATE}_linux_${{ matrix.arch }}"
-                chmod +x "dist/RetroSLM_${DATE}_linux_${{ matrix.arch }}"
-                echo "✓ Packaged valid ${{ matrix.arch }} binary"
-                file "dist/RetroSLM_${DATE}_linux_${{ matrix.arch }}"
-                PACKAGED=true
-                break
+              if echo "$ARCH_INFO" | grep -qE "$EXPECTED_ARCH"; then
+                cp "$BINARY" dist/RetroSLM_${DATE}_linux_${{ matrix.arch }}
+                chmod +x dist/RetroSLM_${DATE}_linux_${{ matrix.arch }}
+                echo "✓ Packaged Linux ${{ matrix.arch }}"
+                file dist/RetroSLM_${DATE}_linux_${{ matrix.arch }}
               else
-                echo "  ✗ Architecture mismatch, skipping"
+                echo "✗ Architecture mismatch for ${{ matrix.arch }}"
+                echo "  Expected: $EXPECTED_ARCH"
+                echo "  Got: $ARCH_INFO"
               fi
-            done < <(find "$SEARCH_DIR" -type f -name "RetroSLM" -print0 2>/dev/null)
+            else
+              echo "✗ No binary found for Linux ${{ matrix.arch }}"
+            fi
           fi
           
-          if [ "$PACKAGED" = "false" ]; then
-            echo "✗ No valid binary found for ${{ matrix.os }} ${{ matrix.arch }}"
-            echo "Build may have failed or produced wrong architecture"
-            # Create marker file so artifact upload doesn't fail
-            echo "BUILD_FAILED" > "dist/. build_failed_${{ matrix.arch }}"
-          fi
-          
-          echo "=== Contents of dist/ ==="
-          ls -la dist/
+          # Show what was packaged
+          echo "=== dist/ contents ==="
+          ls -la dist/ || echo "dist/ is empty"
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name:  RetroSLM-${{ matrix.os }}-${{ matrix. arch }}
+          name: RetroSLM-${{ matrix.os }}-${{ matrix.arch }}
           path: dist/*
           if-no-files-found: ignore
 
   release:
-    needs: build
+    needs:  build
     runs-on: ubuntu-latest
     if: always() && (github.event_name == 'workflow_dispatch' || github.event_name == 'schedule')
     permissions:
@@ -361,46 +329,25 @@ jobs:
         with:
           path: ./release-files
           merge-multiple: true
-      
-      - name:  Prepare release files
+          
+      - name: Show release files
         run: |
-          # Remove failed build markers
-          find ./release-files -name ". build_failed_*" -delete 2>/dev/null || true
-          
           echo "=== Release files ==="
-          ls -lah ./release-files/
-          
+          ls -lah ./release-files/ || echo "No files"
           echo ""
-          echo "=== File architectures ==="
-          find ./release-files -type f !  -name ".*" -exec sh -c 'echo "{}: "; file "{}"' \;
-          
+          echo "=== File types ==="
+          find ./release-files -type f -exec file {} \; || true
           echo ""
-          echo "=== SHA256 checksums ==="
-          find ./release-files -type f !  -name ".*" -exec sha256sum {} \;
-      
+          echo "=== SHA256 ==="
+          sha256sum ./release-files/* 2>/dev/null || true
+          
       - id: datetime
         run: echo "now=$(date +'%Y.%m.%d %H:%M')" >> $GITHUB_OUTPUT
-      
-      - name: Create Release
-        uses: softprops/action-gh-release@v2
+        
+      - uses: softprops/action-gh-release@v2
         with:
           tag_name: nightly-${{ github.run_number }}
           name: "Build:  ${{ steps.datetime.outputs.now }}"
           files: ./release-files/RetroSLM_*
-          body: |
-            ## Nightly Build ${{ steps.datetime.outputs.now }}
-            
-            ### Available builds:
-            - Windows x64/x86
-            - macOS ARM64/x86_64
-            - Linux x86_64
-            - Linux i386 (32-bit) - if cross-compilation succeeded
-            - Linux aarch64 (ARM64) - native build
-            - Linux armv7 (ARM 32-bit) - if cross-compilation succeeded
-            
-            ### Verify architecture:
-            ```bash
-            file RetroSLM_*
-            ```
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN:  ${{ secrets.GITHUB_TOKEN }}
